# gpu-benchmark

./: README.md  pyproject.toml
src/gpu_benchmark/: main.py
src/gpu_benchmark/benchmarks/: __init__.py
