[project]
name = "gpu_benchmark"
version = "0.3.1"
description = "GPU benchmarking tool using Stable Diffusion"
readme = "README.md"
authors = [
    {name = "Roland Graser", email = "roland@unitedcompute.ai"}
]
dependencies = [
    "torch",
    "tqdm",
    "diffusers",
    "transformers",
    "accelerate",
    "pynvml",
    "supabase",
    "tiktoken",
    "requests"
]

[project.scripts]
gpu-benchmark = "gpu_benchmark.main:main"